--- a/workspaces/adder_workspace/pyproject.toml
+++ b/workspaces/adder_workspace/pyproject.toml
@@ -13,3 +13,6 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/adder"]
+
+[tool.pytest.ini_options]
+pythonpath = ["src"]
