--- a/workspaces/multiplier_workspace/pyproject.toml
+++ b/workspaces/multiplier_workspace/pyproject.toml
@@ -11,3 +11,6 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/multiplier"]
+
+[tool.pytest.ini_options]
+pythonpath = ["src"]
