--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ members = ["workspaces/*"]
 
 [dependency-groups]
 dev = [
+    "basedpyright>=1.34.0",
     "pytest>=8.0.0",
     "ruff>=0.8.0",
 ]
@@ -28,13 +29,13 @@ target-version = "py312"
 
 [tool.ruff.lint]
 select = [
-    "E",      
-    "W",      
-    "F",      
-    "I",      
-    "C",      
-    "B",      
-    "N",       
+    "E",
+    "W",
+    "F",
+    "I",
+    "C",
+    "B",
+    "N",
     "ANN",
 ]
 
