--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,48 +1,92 @@
 [project]
-name = "python-tdd-workspace"
+name = "aws-lambdas"
 version = "0.1.0"
-description = "Python TDD Workspace"
-readme = "README.md"
+description = "AWS Lambda Functions Collection"
 requires-python = ">=3.12"
-dependencies = [
-    "adder",
-    "multiplier",
+dependencies = []  # No shared runtime dependencies
+
+[project.optional-dependencies]
+# Each Lambda declares ALL its dependencies explicitly
+adder = [
+    "aws-lambda-powertools>=3.23.0",
 ]
-
-[tool.uv.sources]
-adder = { workspace = true }
-multiplier = { workspace = true }
-
-[tool.uv.workspace]
-members = ["workspaces/*"]
-
-[dependency-groups]
+multiplier = [
+    # multiplier-specific dependencies if any
+]
+# Dev dependencies for local development only
 dev = [
     "basedpyright>=1.34.0",
     "pytest>=8.0.0",
     "ruff>=0.8.0",
 ]
 
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/lambdas"]
+
+# Default dev environment with all dependencies
+[tool.hatch.envs.default]
+installer = "uv"
+features = ["adder", "multiplier", "dev"]
+[tool.hatch.envs.default.scripts]
+# Individual commands
+format = "ruff format src tests"
+lint = "ruff check src tests"
+typecheck = "basedpyright src tests"
+test-only = "pytest"
+# Full validation - runs everything (recommended before commit)
+test = ["format", "lint", "typecheck", "test-only"]
+
+# Environment for adder Lambda
+[tool.hatch.envs.adder]
+installer = "uv"
+features = ["adder"]
+[tool.hatch.envs.adder.scripts]
+test-only = "pytest tests/lambdas/adder -v"
+test = [
+    "ruff format src/lambdas/adder tests/lambdas/adder",
+    "ruff check src/lambdas/adder tests/lambdas/adder",
+    "basedpyright src/lambdas/adder tests/lambdas/adder",
+    "test-only",
+]
+build-docker = "docker build -f docker/adder.Dockerfile -t adder-lambda ."
+
+# Environment for multiplier Lambda
+[tool.hatch.envs.multiplier]
+installer = "uv"
+features = ["multiplier"]
+[tool.hatch.envs.multiplier.scripts]
+test-only = "pytest tests/lambdas/multiplier -v"
+test = [
+    "ruff format src/lambdas/multiplier tests/lambdas/multiplier",
+    "ruff check src/lambdas/multiplier tests/lambdas/multiplier",
+    "basedpyright src/lambdas/multiplier tests/lambdas/multiplier",
+    "test-only",
+]
+build-docker = "docker build -f docker/multiplier.Dockerfile -t multiplier-lambda ."
+
+[tool.pytest.ini_options]
+pythonpath = ["src"]
+testpaths = ["tests"]
+
 [tool.ruff]
 line-length = 120
 target-version = "py312"
+src = ["src"]
 
 [tool.ruff.lint]
-select = [
-    "E",
-    "W",
-    "F",
-    "I",
-    "C",
-    "B",
-    "N",
-    "ANN",
-]
-
-ignore = []
+select = ["E", "W", "F", "I", "C", "B", "N", "ANN"]
+ignore = ["ANN401"]  # Allow Any type for Lambda context and similar dynamic types
 
 [tool.ruff.format]
 quote-style = "double"
 indent-style = "space"
 skip-magic-trailing-comma = false
 line-ending = "auto"
+
+[tool.basedpyright]
+typeCheckingMode = "standard"
+reportExplicitAny = false  # Allow Any for Lambda context and dynamic event data
