--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ dev = [
 # =============================================================================
 
 [tool.uv.workspace]
-members = ["lambdas/adder", "lambdas/multiplier"]
+members = ["packages/adder", "packages/multiplier"]
 
 
 # =============================================================================
@@ -34,7 +34,7 @@ members = ["lambdas/adder", "lambdas/multiplier"]
 
 # Pytest
 [tool.pytest.ini_options]
-pythonpath = ["lambdas"]
+pythonpath = ["packages"]
 testpaths = ["tests"]
 
 
@@ -42,7 +42,7 @@ testpaths = ["tests"]
 [tool.ruff]
 line-length = 120
 target-version = "py312"
-src = ["lambdas"]
+src = ["packages"]
 
 [tool.ruff.lint]
 select = ["E", "W", "F", "I", "C", "B", "N", "ANN"]
@@ -59,4 +59,4 @@ line-ending = "auto"
 [tool.basedpyright]
 typeCheckingMode = "standard"
 reportExplicitAny = false  # Allow Any for Lambda context and dynamic event data
-extraPaths = ["lambdas"]
+extraPaths = ["packages"]
